update libs and version
* Fixed deprecated methods.