@@ -3,16 +3,23 @@ import org.gradle.internal.os.OperatingSystem
 plugins {
     id 'java'
     id 'application'
-    id "org.beryx.runtime" version "1.13.1"
-    id "com.github.johnrengelman.shadow" version "7.0.0"
-    id 'maven-publish'
-    id 'idea'
+    id "org.beryx.runtime" version "2.0.1"
+    id "com.gradleup.shadow" version "9.4.1"
+    id "org.graalvm.buildtools.native" version "1.0.0"
 }
 
 group 'org.doddle-owl'
-version = '24.12.1'
-mainClassName = 'io.github.doddle_owl.DODDLE_OWL'
-sourceCompatibility = targetCompatibility = '17'
+version = '26.5.1'
+
+java {
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
+}
+
+application {
+    mainClass.set('io.github.doddle_owl.DODDLE_OWL')
+}
+
 
 project.ext {
     artifactId = 'doddle-owl'
@@ -24,7 +31,7 @@ repositories {
 }
 
 wrapper {
-    gradleVersion = '7.3'
+    gradleVersion = '9.4.1'
 }
 
 tasks.withType(JavaCompile) {
@@ -49,16 +56,20 @@ jar {
     }
 }
 
-idea {
-    module {
-        inheritOutputDirs = true
-        outputDir = compileJava.destinationDir
-        testOutputDir = compileTestJava.destinationDir
-    }
+tasks.withType(com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar).configureEach {
+    mustRunAfter tasks.named('jar')
+}
+
+tasks.named('startShadowScripts') {
+    dependsOn tasks.named('jar')
+}
+
+tasks.named('installShadowDist') {
+    dependsOn tasks.named('jar')
 }
 
 runtime {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--compress=zip-9', '--no-header-files', '--no-man-pages']
     modules = ['java.desktop', 'java.logging', 'java.xml', 'java.sql']
     imageDir = file("$buildDir/doddle-owl-${version}")
     imageZip = file("$buildDir/doddle-owl-${version}.zip")
@@ -66,18 +77,20 @@ runtime {
     jpackage {
         outputDir = 'my-packaging'
         mainJar = "doddle-owl-${version}.jar"
-        imageName = "doddle-owl-${version}"
+        imageName = "DODDLE-OWL"
         skipInstaller = false
         installerName = "doddle-owl"
+        jvmArgs = ["-XX:+UseCompactObjectHeaders"]
         if (OperatingSystem.current().isWindows()) {
-            jpackageHome = 'C:/Program Files/Java/jdk-17.0.1'
+            jpackageHome = 'C:\\Program Files\\BellSoft\\LibericaJDK-25'
             installerType = 'msi'
+            installerName = 'DODDLE-OWL'
             imageOptions = ['--verbose', '--icon', './src/main/resources/images/doddle-owl.ico']
             installerOptions = ['--vendor', 'Takeshi Morita', '--win-shortcut']
         } else if (OperatingSystem.current().isMacOsX()) {
-            jpackageHome = '/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home'
+            jpackageHome = '/Library/Java/JavaVirtualMachines/liberica-jdk-25.jdk/Contents/Home'
             installerType = 'dmg'
-            imageOptions = ['--verbose', '--icon', './src/main/resources/images/doddle-owl.icns']
+            imageOptions = ['--verbose', '--icon', './src/main/resources/images/doddle-owl.icns', '--mac-package-identifier', 'io.github.doddle-owl']
             installerOptions = ['--vendor', 'Takeshi Morita']
         }
     }
@@ -112,49 +125,20 @@ shadowJar {
 }
 
 dependencies {
-    implementation 'com.formdev:flatlaf:3.5.4'
-    implementation 'org.xerial:sqlite-jdbc:3.47.1.0'
-    implementation 'commons-cli:commons-cli:1.9.0'
-    implementation 'org.apache.pdfbox:pdfbox:2.0.32'
+    implementation 'com.formdev:flatlaf:3.7.1'
+    implementation 'org.xerial:sqlite-jdbc:3.53.0.0'
+    implementation 'commons-cli:commons-cli:1.11.0'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.36'
     implementation 'net.sf.extjwnl:extjwnl:2.0.5'
     implementation 'net.sf.extjwnl:extjwnl-data-wn31:1.2'
     implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
     implementation 'org.apache.poi:poi-ooxml:3.17'
     implementation 'edu.stanford.nlp:stanford-parser:3.9.2'
-    implementation 'org.apache.jena:apache-jena-libs:5.2.0'
-    implementation 'org.slf4j:slf4j-simple:1.7.36'
-    implementation 'log4j:log4j:1.2.17'
+    implementation 'org.apache.jena:apache-jena-libs:5.6.0'
+    implementation 'org.slf4j:slf4j-simple:2.0.17'
+    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
     implementation 'com.optimaize.languagedetector:language-detector:0.6'
-    compileOnly 'org.projectlombok:lombok:1.18.36'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.3'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.3'
-}
-
-publishing {
-    publications {
-        MyPublication(MavenPublication) {
-            groupId = 'io.github.doddle-owl'
-            artifactId = 'doddle-owl'
-
-            from components.java
-            pom {
-                name = 'DODDLE-OWL'
-                description = 'a Domain Ontology rapiD DeveLopment Environment - OWL extension'
-                url = 'http://doddle-owl.github.io/'
-                licenses {
-                    license {
-                        name = 'GNU GENERAL PUBLIC LICENSE, Version 3'
-                        url = 'http://www.gnu.org/licenses/gpl-3.0.html'
-                    }
-                }
-                developers {
-                    developer {
-                        id = 't-morita'
-                        name = 'Takeshi Morita'
-                        email = 'morita@it.aoyama.ac.jp'
-                    }
-                }
-            }
-        }
-    }
+    compileOnly 'org.projectlombok:lombok:1.18.46'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.3'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.3'
 }
